# seminar-2022-backend

./: .gitignore  Dockerfile  README.md  demo.py  docker-compose.prod.yaml  docker-compose.yml  fastapi.py  healthcheck.py  pyproject.toml  requirements.txt
.github/workflows/: deploy-to-cloud-run.yaml
api/: main.py
api/routers/: mock.py
api/schemas/: mock.py
app/: Dockerfile  main.py  model.py  pyproject.toml
terraform/gcs/: apis.tf  cloud_run.tf  config.tf  iam.tf  registry.tf  vars.tf
