[tool.poetry]
name = "seminar-2022-backend"
version = "0.1.0"
description = ""
authors = ["Taito Nakada <31927@toyota.kosen-ac.jp>"]
readme = "README.md"
packages = [{include = "seminar_2022_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
torch = "^1.13.1"
transformers = "^4.25.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
cabocha-python = "^0.69.3"
pytorch-lightning = "^1.9.0"
python-box = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
